--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Notebook
 #email: ???@???.com
 #description: >- # this means to ignore newlines until "baseurl:"
-  Waiting for descripition.
+#  Waiting for descripition.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyll
